<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/top_bar_main"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/space_30dp"
                android:paddingTop="@dimen/space_15dp"
                android:paddingRight="@dimen/space_25dp"
                android:paddingBottom="@dimen/space_20dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civ_head"
                    android:layout_width="@dimen/space_60dp"
                    android:layout_height="@dimen/space_60dp"
                    android:src="@drawable/morentouxiang"/>

                <TextView
                    android:id="@+id/tv_nikename_lr"
                    style="@style/tv_style_6"
                    android:layout_marginLeft="@dimen/space_10dp"
                    android:layout_weight="1"
                    android:text="@string/login_register"/>

                <ImageButton
                    android:id="@+id/ib_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tuichudenglu"
                    android:visibility="gone"/>
            </LinearLayout>

            <include layout="@layout/line_space_10"/>

            <TextView
                android:id="@+id/tv_maxcard"
                style="@style/mine_tv_style"
                android:drawableLeft="@drawable/erweima"
                android:text="@string/maxcard"/>

            <include layout="@layout/line_space_10"/>

            <TextView
                android:id="@+id/tv_my_team"
                style="@style/mine_tv_style"
                android:drawableLeft="@drawable/wodezhandui_"
                android:text="@string/my_team"/>

            <TextView
                android:id="@+id/tv_gold_supermarket"
                style="@style/mine_tv_style"
                android:drawableLeft="@drawable/huangjinchaoshi"
                android:text="@string/gold_supermarket"/>

            <TextView
                android:id="@+id/tv_my_message"
                style="@style/mine_tv_style"
                android:drawableLeft="@drawable/wodexinxi"
                android:text="@string/my_info"/>

            <TextView
                android:id="@+id/tv_information_disclosure"
                style="@style/mine_tv_style"
                android:drawableLeft="@drawable/xinxipilu"
                android:text="@string/information_disclosure"/>

            <TextView
                android:id="@+id/tv_about_us"
                style="@style/mine_tv_style"
                android:drawableLeft="@drawable/guanyuwomen"
                android:text="@string/about_us"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>