<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.aladinn.walletkotlin.widget.CustomVp
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_tab1"
            style="@style/ll_tab_style">

            <TextView
                android:id="@+id/tv1"
                android:text="@string/shouye"
                style="@style/tv_tab_style" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_tab2"
            style="@style/ll_tab_style">

            <TextView
                android:id="@+id/tv2"
                style="@style/tv_tab_style"
                android:drawableTop="@drawable/selector_page2"
                android:text="@string/market"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_tab3"
            style="@style/ll_tab_style">

            <TextView
                android:id="@+id/tv3"
                style="@style/tv_tab_style"
                android:drawableTop="@drawable/selector_page3"
                android:text="@string/wallet"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_tab4"
            style="@style/ll_tab_style">

            <TextView
                android:id="@+id/tv4"
                style="@style/tv_tab_style"
                android:drawableTop="@drawable/selector_page4"
                android:text="@string/mine"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>